# engramic

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.txt  README.md  default_engram_profiles.toml  engram_profiles.toml  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: deploy_docs.yml  publish_PRODUCTION_pypi.yml  publish_testpypi.yml  test.yml
0.0/: 404.html  index.html
0.0/getting_started/: index.html
0.0/host_and_services/: index.html
0.0/how_to/: index.html
0.0/profiles/: index.html
0.0/reference/ask/: index.html
0.0/reference/codify_service/: index.html
0.0/reference/consolidate_service/: index.html
0.0/reference/emgram/: index.html
0.0/reference/message_service/: index.html
0.0/reference/response_service/: index.html
0.0/reference/retrieve_service/: index.html
0.0/reference/storage_service/: index.html
0.0/search/: search_index.json
0.1/: 404.html  index.html  objects.inv
0.1/getting_started/: index.html
0.1/host_and_services/: index.html
0.1/how_to/: index.html
0.1/profiles/: index.html
0.1/reference/ask/: index.html
0.1/reference/codify_service/: index.html
0.1/reference/consolidate_service/: index.html
0.1/reference/emgram/: index.html
0.1/reference/message_service/: index.html
0.1/reference/response_service/: index.html
0.1/reference/retrieve_service/: index.html
0.1/reference/storage_service/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  objects.inv
0.2/getting_started/: index.html
0.2/host_and_services/: index.html
0.2/how_to/: index.html
0.2/howto/how_to_parse_documents/: index.html
0.2/profiles/: index.html
0.2/reference/ask/: index.html
0.2/reference/codify_service/: index.html
0.2/reference/consolidate_service/: index.html
0.2/reference/emgram/: index.html
0.2/reference/message_service/: index.html
0.2/reference/progress_service/: index.html
0.2/reference/response_service/: index.html
0.2/reference/retrieve_service/: index.html
0.2/reference/scan/: index.html
0.2/reference/sense_service/: index.html
0.2/reference/storage_service/: index.html
0.2/search/: search_index.json
0.3/: 404.html  index.html  objects.inv
0.3/getting_started/: index.html
0.3/host_and_services/: index.html
0.3/howto/how_to_load_a_repo/: index.html
0.3/howto/how_to_parse_documents/: index.html
0.3/howto/how_to_run_a_lesson/: index.html
0.3/howto/howto/: index.html
0.3/profiles/: index.html
0.3/reference/ask/: index.html
0.3/reference/codify_service/: index.html
0.3/reference/consolidate_service/: index.html
0.3/reference/emgram/: index.html
0.3/reference/lesson/: index.html
0.3/reference/message_service/: index.html
0.3/reference/progress_service/: index.html
0.3/reference/repo_service/: index.html
0.3/reference/response_service/: index.html
0.3/reference/retrieve_service/: index.html
0.3/reference/scan/: index.html
0.3/reference/sense_service/: index.html
0.3/reference/storage_service/: index.html
0.3/reference/teach/: index.html
0.3/search/: search_index.json
0.3/stylesheets/: extra.css
0.4/: 404.html  index.html  objects.inv
0.4/getting_started/: index.html
0.4/host_and_services/: index.html
0.4/howto/how_to_load_a_repo/: index.html
0.4/howto/how_to_parse_documents/: index.html
0.4/howto/how_to_run_a_lesson/: index.html
0.4/howto/howto/: index.html
0.4/profiles/: index.html
0.4/reference/ask/: index.html
0.4/reference/codify_service/: index.html
0.4/reference/consolidate_service/: index.html
0.4/reference/emgram/: index.html
0.4/reference/lesson/: index.html
0.4/reference/message_service/: index.html
0.4/reference/progress_service/: index.html
0.4/reference/repo_service/: index.html
0.4/reference/response_service/: index.html
0.4/reference/retrieve_service/: index.html
0.4/reference/scan/: index.html
0.4/reference/sense_service/: index.html
0.4/reference/storage_service/: index.html
0.4/reference/teach/: index.html
0.4/search/: search_index.json
docs/: getting_started.md  host_and_services.md  how_to.md  index.md  profiles.md
docs/howto/: how_to_load_a_repo.md  how_to_parse_documents.md  how_to_run_a_lesson.md  howto.md
docs/reference/: ask.md  codify_service.md  consolidate_service.md  emgram.md  lesson.md  message_service.md  progress_service.md  repo_service.md  response_service.md  retrieve_service.md  scan.md  sense_service.md  storage_service.md  teach.md
examples/create_memory/: create_memory.py
examples/document/: document.py
examples/mock_only/: mock_only.py
examples/mock_profile/: mock_profile.py
examples/process/: process.py
examples/production/: production.py
examples/repo/: repo.py
examples/standard_profile/: standard_profile.py
examples/teach/: teach.py
src/engramic/: __about__.py
src/engramic/application/codify/: codify_service.py  prompt_validate_prompt.py
src/engramic/application/consolidate/: consolidate_service.py  prompt_gen_indices.py
src/engramic/core/: __init__.py  context.py  db.py  document.py  embedding.py  engram.py  file_node.py  host.py  host_base.py  index.py  index_db.py  library.py  llm.py  meta.py  observation.py  process.py  prompt.py  prompt_analysis.py  repo.py  response.py  retrieval.py  retrieve_result.py  vector_db.py
src/engramic/infrastructure/: engram_profiles.py
src/engramic/resources/: default_engram_profiles.toml  mock.txt
tests/application/integration/: generate_test_data.py  test_codify.py  test_consolidate.py  test_doc_process.py  test_response.py  test_retrieve.py  test_sense.py
tests/application/local/: test_doc_process.py  test_sense.py
tests/core/unit/: test_ask.py  test_engram.py
tests/data/: mock.txt
web/: index.html
(+72 files in other folders)
